--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "alarmclock-rsa",
   "version": "1.0.0",
-  "description": "树莓派工作日闹钟 =====================",
+  "description": "树莓派工作日闹钟",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,7 +19,6 @@
   "homepage": "https://github.com/luoye-fe/alarmclock-rsa#readme",
   "dependencies": {
     "axios": "^0.16.2",
-    "node-schedule": "^1.2.3",
-    "time": "^0.12.0"
+    "node-schedule": "^1.2.3"
   }
 }
