--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "chalk": "^2.0.1",
+    "mpg123": "^0.2.3",
     "node-schedule": "^1.2.3"
   }
 }
